@@ -866,6 +866,30 @@ public final class UserAOImpl extends IRODSGenericAO implements UserAO {
 
 	}
 
+	@Override
+	public void updateUserInfo(final String userName, final String userInfo)
+			throws DataNotFoundException, JargonException {
+		log.info("updateUserInfo()");
+
+		if (userName == null || userName.isEmpty()) {
+			throw new IllegalArgumentException("null or empty userName");
+		}
+
+		if (userInfo == null) {
+			throw new IllegalArgumentException("null userInfo");
+		}
+
+		log.info("userName:{}", userName);
+		log.info("userInfo:{}", userInfo);
+
+		User user = this.findByName(userName);
+
+		log.info("looked up user:{}", user);
+		user.setInfo(userInfo);
+		this.updateUserInfo(user);
+		log.info("updated info");
+	}
+
 	private void updateUserType(final User user) throws JargonException {
 		GeneralAdminInp adminPI = GeneralAdminInp.instanceForModifyUserType(
 				user.getName(), user.getUserType());
